#161 ensure diagnostic file failure does not affect upload